--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -21,7 +21,7 @@
             <% end %>
           </div>
         </div>
-      <p>By signing up, I agree to the <%= link_to 'Terms of Service', '#' %>.</p>
+      <p>By signing up, I agree to the <%= link_to 'Terms of Service', terms_show_path, target: "_blank" %>.</p>
     </div>
   </div>
 </body>
