--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,7 +1,3 @@
-<footer class="footer">
-  <div class="container">
-    <p class="text-center">
-      A community portal for LCS parents.<br />This site is not run by or affiliated with LCS, yada, yada, yada...<br />Copyright © 2016 _____. All Rights Reserved.
-    </p>
-  </div>
+<footer class="page-row">
+  <p class="text-center">A community portal for LCS parents.<br />Copyright © 2016 _____. All Rights Reserved.</p>
 </footer>
