--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,19 +1,31 @@
-<div class="navbar navbar-default" role="navigation">
+<nav class="navbar navbar-default">
   <div class="container">
     <div class="navbar-header">
-      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
         <span class="sr-only">Toggle navigation</span>
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <%= link_to 'LCS Parents Board', root_path, class: "navbar-brand" %>
-    </div>
-    <div class="collapse navbar-collapse">
-      <ul class="nav navbar-nav navbar-right">
-        <li><%= link_to 'Sign out', destroy_user_session_path, method: :delete, class: 'navbar-link'  %></li>
-      </ul>
-    </div>
-
+    <%= link_to 'LCS Parents Board', root_path, class: "navbar-brand" %>
   </div>
-</div>
+    <div id="navbar" class="collapse navbar-collapse">
+      <ul class="nav navbar-nav">
+        <li><%= link_to 'Terms of Use', terms_show_path %></li>
+        <li><a href="#contact">Contact</a></li>
+      </ul>
+      <ul class="nav navbar-nav navbar-right">
+        <li class="dropdown">
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><%= current_user.first_name %>&nbsp;<%= current_user.last_name %>&nbsp;<span class="caret"></span></a>
+          <ul class="dropdown-menu">
+            <li><%= link_to 'All Posts', posts_path %></li>
+            <li><%= link_to 'New Post', new_post_path %></li>
+            <li role="separator" class="divider"></li>
+            <li><%= link_to 'Your account', '#' %></li>
+            <li><%= link_to 'Sign out', destroy_user_session_path, method: :delete %></li>
+          </ul>
+        </li>
+      </ul>
+    </div><!--/.nav-collapse -->
+  </div>
+</nav>
