--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,14 +1,10 @@
-<body id="welcome-index">
-
+<body id="welcome">
   <div class="container-fluid">
     <div class="jumbotron text-center">
-      <div class="row">
-        <div class="col-md-12">
-          <h1>LCS Parents Board</h1>
-          <p><%= link_to '<i class="fa fa-user-plus"></i>&nbsp;Join'.html_safe, new_user_registration_path, class: 'btn btn-success' %>&nbsp;<%= link_to '<i class="fa fa-sign-in"></i>&nbsp;Log in'.html_safe, new_user_session_path, class: 'btn btn-primary' %></p>
-        </div>
-      </div>
+      <h1>LCS Parents Board</h1>
+        <p>A community portal for the parents of<br />Larchmont Charter School.</p>
+        <p><%= link_to '<i class="fa fa-user-plus"></i>&nbsp;Join'.html_safe, new_user_registration_path, class: 'btn btn-success btn-lg' %>&nbsp;<%= link_to '<i class="fa fa-sign-in"></i>&nbsp;Log in'.html_safe, new_user_session_path, class: 'btn btn-primary btn-lg' %></p>
+        <p id="welcome-small">Copyright © 2016 _____. All Rights Reserved.</p>
     </div>
   </div>
-
 </body>
