--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,3 +1,3 @@
-<footer class="page-row">
+<footer>
   <p class="text-center">A community portal for LCS parents.<br />Copyright © 2016 _____. All Rights Reserved.</p>
 </footer>
