--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -2,11 +2,12 @@
   <div class="row">
 
     <div class="col-md-8">
-      <h4 id="title">Editing Post [<%= @post.title %>]</h4>
+      <h4 id="title">Editing Post</h4>
       <%= simple_form_for [@post] do |f| %>
         <div class="form-inputs">
           <%= f.input :title %>
           <%= f.input :body, as: :text, input_html: { rows: 10 } %>
+          <%= f.input :tag_list, label: "Tags (seperated by commas)", input_html: {value: @post.tag_list.to_s} %>
           <%= f.button :button, "Save changes".html_safe, class: 'btn btn-success', data: {disable_with: "<i class='fa fa-spinner fa-spin'></i> Saving..."} %>&nbsp;<%= link_to "Cancel", url_for(@post.user), class: 'btn btn-primary' %>
         </div>
       <% end %>
