--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -19,6 +19,10 @@
 
 /* GENERAL */
 
+a, a:active, a:focus, a:hover {
+  color: #4078c0;
+}
+
 body {
   display: table;
   width: 100%;
@@ -30,22 +34,23 @@ html, body {
 }
 
 footer {
-  background: #e7e7e7;
   display: table-row;
   height: 1px;
 }
 
 footer p {
+  border-top: 1px solid #e5e5e5;
   font-size: 13px;
-  margin-bottom: 20px;
   margin-top: 20px;
+  padding-top: 20px;
+  padding-bottom: 20px;
 }
 
 .page-row-expanded { height: 100%; }
 
 #title {
   font-size: 20px;
-  padding-top: 20px;
+  padding-top: 10px;
 }
 
 #title-comments {
@@ -92,6 +97,8 @@ footer p {
 
 /* NAVIGATION */
 .navbar {
+  background: #f5f5f5;
+  border-bottom: 1px solid #e5e5e5;
   border-radius: 0;
   margin-bottom: 0;
 }
@@ -105,13 +112,28 @@ footer p {
   padding-top: 2px;
 }
 
-/* POSTS-INDEX */
-#posts-index a {
-  color: #000;
+.navbar-default .navbar-nav > li > a {
+  color: #333;
+  font-size: 13px;
+  font-weight: 700;
 }
 
-#posts-index a:hover {
-  color: #337ab7;
+.navbar-default .navbar-nav > li > a:hover {
+  color: #4078c0;
+}
+
+/* hamburger */
+.navbar-default .navbar-toggle .icon-bar {
+ background-color: #333;
+ border: none;
+}
+
+.navbar-default .navbar-toggle {
+ border: none;
+}
+
+.navbar-default .navbar-toggle:active, .navbar-default .navbar-toggle:focus, .navbar-default .navbar-toggle:hover {
+ background: inherit;
 }
 
 /* POSTS-SHOW */
@@ -136,6 +158,10 @@ blockquote {
 }
 
 /* WELCOME-INDEX */
+#welcome p {
+  font-weight: 400;
+}
+
 #welcome footer {
   display: none;
 }
