--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,3 +1,5 @@
 <footer>
-  <p class="text-center">A community portal for LCS parents.<br />Copyright © 2016 _____. All Rights Reserved.</p>
+  <div class="container">
+    <p class="text-center">Copyright © 2016 PARBO&nbsp;/&nbsp;<%= link_to 'Terms of Use', terms_show_path %>&nbsp;/&nbsp;<%= link_to 'Contact', '#' %>&nbsp;/&nbsp;<%= link_to 'Help', '#' %></p>
+  </div>
 </footer>
