--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -3,11 +3,11 @@
 
     <div class="row">
       <div class="col-md-8">
-        <h4 id="title">All Posts</h4>
+        <h4 id="title">Posts</h4>
 
         <!-- tagged posts -->
         <% if params[:tag].present? %>
-          <%= "These are the posts with the '#{(params[:tag])}' tag" %>.<br /><%= link_to 'See all pages <i class="fa fa-angle-double-right"></i>'.html_safe, posts_path %>
+          <p><%= "These are the posts with the '#{(params[:tag])}' tag" %>.</p>
           <% @tagged_posts.each do |post| %>
             <p>
               <%= localize(post.updated_at, :format => :post_default) %>&nbsp;-&nbsp;<%= link_to post.title, post_path(post) %>
@@ -16,6 +16,7 @@
               &nbsp;
               <%= link_to 'Delete post', post, method: :delete, data: {confirm: "Are you sure?"} %>
             </p>
+            <p><%= link_to 'See all posts <i class="fa fa-angle-double-right"></i>'.html_safe, posts_path %></p>
           <% end %>
         <!-- all posts -->
         <% else %>
