--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,8 +1,81 @@
 <body id="users-show">
   <div class="container">
     <div class="row">
-      <div class="col-md-12">
-        <p><%= @user.first_name %> <%= @user.last_name %></p>
+      <div class="col-md-4">
+        <p><h4 id="title"><%= @user.first_name %> <%= @user.last_name %></h4></p>
+        <p><%= link_to "Edit your profile", edit_user_registration_path %></p>
+        <p><%= link_to 'Create A New Page', new_post_path %></p>
+        <p>Latest Post:
+          <% if @user.posts.empty? %>
+            &nbsp;<%= "No posts" %>
+          <% else %>
+            <br /><%= link_to "#{@user.posts.last.title}", post_path(@user.posts.last) %>
+          <% end %></p>
+        <p>Bookmarked posts:
+          <% if @user.bookmark_posts.empty? %>
+            &nbsp;<%= "None" %>
+          <% else %>
+            <br /><% @user.bookmark_posts.each do |post| %>
+              <%= link_to post.title, post_path(post) %><br />
+            <% end %>
+          <% end %>
+        <p>Comments: <%= @user.comments.count %></p>
+        <p>Last Comment:
+          <% if @user.comments.empty? %>
+            <%= "No comments" %>
+          <% else %>
+            <%= localize(@user.comments.last.created_at, :format => :comment_default) %>
+          <% end %></p>
+      </div>
+
+      <div class="col-md-4">
+        <p><h4 id="title">Your PARBO Activity</h4></p>
+        <p>Latest Post:
+          <% if @user.posts.empty? %>
+            &nbsp;<%= "No posts" %>
+          <% else %>
+            <br /><%= link_to "#{@user.posts.last.title}", post_path(@user.posts.last) %>
+          <% end %></p>
+        <p>Bookmarked posts:
+          <% if @user.bookmark_posts.empty? %>
+            &nbsp;<%= "None" %>
+          <% else %>
+            <br /><% @user.bookmark_posts.each do |post| %>
+              <%= link_to post.title, post_path(post) %><br />
+            <% end %>
+          <% end %>
+        <p>Comments: <%= @user.comments.count %></p>
+        <p>Last Comment:
+          <% if @user.comments.empty? %>
+            <%= "No comments" %>
+          <% else %>
+            <%= localize(@user.comments.last.created_at, :format => :comment_default) %>
+          <% end %></p>
+      </div>
+
+      <div class="col-md-4">
+        <p><h4 id="title">All PARBO Activity</h4></p>
+        <p>Latest Post:
+          <% if @user.posts.empty? %>
+            &nbsp;<%= "No posts" %>
+          <% else %>
+            <br /><%= link_to "#{@user.posts.last.title}", post_path(@user.posts.last) %>
+          <% end %></p>
+        <p>Bookmarked posts:
+          <% if @user.bookmark_posts.empty? %>
+            &nbsp;<%= "None" %>
+          <% else %>
+            <br /><% @user.bookmark_posts.each do |post| %>
+              <%= link_to post.title, post_path(post) %><br />
+            <% end %>
+          <% end %>
+        <p>Comments: <%= @user.comments.count %></p>
+        <p>Last Comment:
+          <% if @user.comments.empty? %>
+            <%= "No comments" %>
+          <% else %>
+            <%= localize(@user.comments.last.created_at, :format => :comment_default) %>
+          <% end %></p>
       </div>
     </div>
   </div>
